Make sure images aren't too big

--- a/styles/main.css
+++ b/styles/main.css
@@ -65,6 +65,9 @@ h1, h2, h3, h4, h5, h6 {
 .post {
     line-height: 150%;
 }
+.post img {
+    max-width: 100%;
+}
 .post a, .post a:link {
     text-decoration: underline;
 }
